# boxing

./: CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
__dev/: build_grid_index.py  deslop.py  deslop2.py
src/boxing/: __init__.py  connected_components.py  get_data_in_project_example.py  precursor_neighbors_config.py  spatial_index.py  spatial_index_redesign.py  testing.py  utils.py
src/boxing/cli/: build_precursor_grid_index.py  precursor_neighbors.py  precursor_neighbors_params.py
tests/: test_connected_components.py  test_spatial_index.py
